[package]
name = "hyperproxy"
version = "0.1.0"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "MIT"
repository = "https://github.com/Protryon/hyperproxy"
description = "A PROXYv2 wrapper for hyper and tonic."
keywords = ["proxy", "hyper", "tonic"]

[dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["io-util"] }
hyper = { version = "0.14", features = ["server", "stream", "tcp"] }
tonic = { version = "0.7", optional = true }
log = "0.3"

[features]
track_conn_count = []