[package]
name = "hyperproxy"
version = "0.2.6"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "MIT"
repository = "https://github.com/Protryon/hyperproxy"
description = "A PROXYv2 wrapper for hyper and tonic."
keywords = ["proxy", "hyper", "tonic"]

[dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["io-util"] }
hyper = { version = "0.14", features = ["server", "stream", "tcp"] }
# required to be pinned because of type transmutation
tonic = { version = "=0.7.2", optional = true }
log = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"

[features]
track_conn_count = []
